Fix body overflow in blog

--- a/components/Blog/layout.module.css
+++ b/components/Blog/layout.module.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 36rem;
   padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  padding-top: 3rem;
+  margin: 0rem auto 6rem;
 }
 
 .header {
